<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"

        android:checkable="true"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintDimensionRatio="16:9"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Carlos de Andrade Lima"


                />

            <TextView
                android:id="@+id/tv_telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_telefone"
                android:textSize="16sp"

                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_nome"
                tools:text="11 9 8256-3412"


                />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_email"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_telefone"
                tools:text="carlos.andrade@jrgcompany.com.br"


                />

            <TextView
                android:id="@+id/tv_empresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_empresa"
                android:textSize="18sp"
                android:textStyle="bold|italic"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                tools:text="JRG COMPANY" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>